# RustyNzb

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  main.rs
src/parser/: entities.rs  mod.rs
