[package]
name = "rustynzb"
version = "0.1.0"
authors = ["tbess <tdbgamer@gmail.com>"]

[lib]
name = "rustynzb"
path = "src/lib.rs"

[dependencies]
quick-xml = "0.10.0"
failure = "0.1.1"
log = { version = "0.4.1", features = ["max_level_debug", "release_max_level_warn"] }
env_logger = "0.5.5"
nntp = { version = "0.0.7", git = 'https://github.com/tdbgamer/rust-nntp' }
